selfhost/test/typechecker/identifier/error_type_mismatch_None.out
Error at %FILE_NAME%:1:14
Type mismatch
  |  val x: Int = None
                  ^
Expected: Int
but instead found: <unknown>?
